# Open3DQSAR

open3dqsar/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  README  bootstrap  configure.ac
open3dqsar/doc/: Makefile  Makefile.am  Makefile.in  Open3DQSAR.html
open3dqsar/example/: Makefile.am
open3dqsar/example/CS3D/: Makefile.am  sample_input_CS3D.inp
open3dqsar/example/GRID/: Makefile.am  sample_input_GRID.inp
open3dqsar/example/MM/: Makefile.am
open3dqsar/example/QM_FIREFLY/: Makefile.am
open3dqsar/example/QM_GAMESS/: Makefile.am  sample_input_QM_GAMESS.inp
open3dqsar/example/QM_GAUSSIAN/: Makefile.am
open3dqsar/example/QM_TURBOMOLE/: Makefile.am
open3dqsar/icons/: O3Q_icon_macosx.icns
open3dqsar/libedit-20120601-3.0/: Makefile  aclocal.m4  config.h.in  configure.ac  libedit.pc
open3dqsar/libedit-20120601-3.0/doc/: Makefile
open3dqsar/libedit-20120601-3.0/examples/: Makefile  tc1
open3dqsar/libedit-20120601-3.0/src/: Makefile
open3dqsar/mingweditline-2.07/lib32/pkgconfig/: libedit.pc
open3dqsar/src/: Makefile.am  alloc.c  autoscale.c  average.c  buw.c  calc_active_vars.c  calc_field.c  calc_large_mat_ave.c  calc_y_values.c  check_deps.c  check_regex_name.c  close_files.c  cutoff.c  cv.c  cv_thread.c  d_optimal.c  dcdflib.c  determine_best_cpu_number.c  double_mat.c  double_vec.c  exclude.c  ffdsel.c  file.c  fill_env.c  fill_matrix.c  fill_numberlist.c  fill_vector.c  get_args.c  get_attr.c  get_buf.c  get_number_of_procs.c  get_system_information.c  get_value.c  grid_box.c  grid_write.c  import_cosmotherm.c  import_dependent.c  import_free_format.c  import_grid_ascii.c  import_grid_formatted_cube.c  (+51 more)
open3dqsar/src/include/: error_messages.h  extern.h  ff_parm.h  interpolation_coefficients.h  ipmpar.h  keywords.h  nice_windows.h  o3header.h  proc_env.h  prog_exe_info.h  rl_runtime.h  safe_rint.h
open3dqsar/test/: Makefile.am  test.sh
open3dqsar/test/reference_results/: Makefile.am  sample_input_MM.out
open3dqsar/util/: Makefile.am  ReadMOEGRID.svl  WriteMOEGRID.svl  extract_comfa.spl  extract_comsia.spl
trunk/open3dqsar/: COPYING  ChangeLog  INSTALL  Makefile.am  bootstrap  configure.ac
trunk/open3dqsar/doc/: Makefile.am  Open3DQSAR.html  stylesheet.css
trunk/open3dqsar/example/: Makefile.am
trunk/open3dqsar/example/CS3D/: Makefile.am
trunk/open3dqsar/example/GRID/: Makefile.am
trunk/open3dqsar/example/MM/: ref_e2.sdf  sample_input_MM.inp
trunk/open3dqsar/example/QM_FIREFLY/: Makefile.am  sample_input_QM_FIREFLY.inp
trunk/open3dqsar/example/QM_GAMESS/: Makefile.am
trunk/open3dqsar/example/QM_GAUSSIAN/: Makefile.am  sample_input_QM_GAUSSIAN.inp
trunk/open3dqsar/example/QM_TURBOMOLE/: Makefile.am  ref_e2.sdf  sample_input_QM_TURBOMOLE.inp
trunk/open3dqsar/libedit-20120601-3.0/: config.h  config.status  configure  libtool
trunk/open3dqsar/libedit-20120601-3.0/autom4te.cache/: output.0  traces.0
trunk/open3dqsar/libedit-20120601-3.0/examples/: fileman
trunk/open3dqsar/libedit-20120601-3.0/src/: vi.c
trunk/open3dqsar/mingweditline-2.07/lib64/pkgconfig/: libedit.pc
trunk/open3dqsar/src/: Makefile  Makefile.am  Makefile.in  alloc.c  autoscale.c  average.c  buw.c  calc_active_vars.c  calc_field.c  calc_large_mat_ave.c  calc_y_values.c  check_deps.c  check_regex_name.c  close_files.c  cutoff.c  cv.c  cv_thread.c  d_optimal.c  determine_best_cpu_number.c  double_mat.c  double_vec.c  exclude.c  ffdsel.c  file.c  fill_env.c  fill_matrix.c  fill_numberlist.c  fill_vector.c  free.c  get_args.c  get_attr.c  get_buf.c  get_system_information.c  get_value.c  grid_box.c  grid_write.c  import_dependent.c  import_free_format.c  import_grid_ascii.c  import_grid_dx.c  (+60 more)
trunk/open3dqsar/src/include/: basis_set.h  cdflib.h  error_messages.h  extern.h  ff_parm.h  interpolated_value.h  interpolation_coefficients.h  ipmpar.h  keywords.h  o3header.h  proc_env.h  safe_rint.h
trunk/open3dqsar/test/: Makefile.am  test.sh
trunk/open3dqsar/test/reference_results/: Makefile.am  sample_input_MM.out
trunk/open3dqsar/util/: Makefile.am  ReadMOEGRID.svl  WriteMOEGRID.svl  extract_comfa.spl  extract_comsia.spl
trunk/open3dqsar/zlib-1.2.8/: Makefile
trunk/open3dqsar/zlib-1.2.8/contrib/minizip/: bootstrap  configure.ac  minizip.pc
