# Makefile.am
# 
# is part of
# 
# Open3DQSAR
# ----------
# 
# An open-source software aimed at high-throughput
# chemometric analysis of molecular interaction fields
# 
# Copyright (C) 2009-2018 Paolo Tosco, Thomas Balle
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program. If not, see <http://www.gnu.org/licenses/>.
# 
# For further information, please contact:
# 
# Paolo Tosco, PhD
# Dipartimento di Scienza e Tecnologia del Farmaco
# Universita' degli Studi di Torino
# Via Pietro Giuria, 9
# 10125 Torino (Italy)
# Phone:  +39 011 670 7680
# Mobile: +39 348 553 7206
# Fax:    +39 011 670 7687
# E-mail: paolo.tosco@unito.it


docdir = $(datadir)/doc/@PACKAGE@
doc_DATA = \
E_ele.png \
envelope.png \
E_VdW_GAFF.png \
E_VdW_MMFF94_a.png \
E_VdW_MMFF94_b.png \
E_VdW_MMFF94_c.png \
E_VdW_MMFF94_d.png \
E_VdW_MMFF94_e.png \
E_VdW.png \
favicon.ico \
favicon.png \
freebsd.png \
linux.png \
macosx.png \
Open3DQSAR_home_banner_website.png \
Open3DQSAR.html \
pt_e-mail.png \
solaris.png \
stylesheet.css \
windows.png
